--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "concurrently -k \"cross-env NODE_ENV=development tsx server/index.ts\" \"vite\"",
-    "build": "vite build",
+    "build": "cd client && npm install && npm run build && cd .. && mkdir -p dist && cp -r client/dist/* dist/",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
